--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KChat - AI Chat Application</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Minimal compatibility shims (safe for modern browsers) -->
     <script>
       (function () {
@@ -43,6 +42,7 @@
       })();
     </script>
     <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/legacy-fallbacks.css">
     <!-- Rich Content Rendering Libraries -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
